# valint

./: .gitignore  AUTHORS  Makefile.am  Makefile.decl  README  autogen.sh  configure.ac
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am  valint.vala
tests/: Makefile.am  testcase.vala  testmain.vala  teststub.vala
valint/: Makefile.am  stub.vala
valint-cli/: Makefile.am  main.vala
vapi/: Makefile.am  config.vapi
